# webnovel-kb

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MAINTENANCE.md  README.md  ROADMAP.md  pyproject.toml  test_server_import.py  webnovel-mcp.service
.github/workflows/: python-package-conda.yml  python-package.yml
tests/: __init__.py  test_config.py
webnovel_kb/: __init__.py  __main__.py  api_clients.py  batch_ingest.py  config.py  data_models.py  oauth_auth.py  prompts.py  requirements.txt  run_ingest.py  search_engines.py  server.py
webnovel_kb/analysis/: __init__.py  humor.py  style.py
webnovel_kb/api/: __init__.py  clients.py  mcp_tools.py
webnovel_kb/core/: __init__.py  chunker.py  indexer.py  knowledge_base.py  state.py
webnovel_kb/extraction/: __init__.py  entities.py  plot_patterns.py  scene_patterns.py  writing_templates.py
webnovel_kb/scripts/: build_optimized_indexes.py
webnovel_kb/search/: __init__.py  bm25_search.py  hybrid.py  rerank.py  semantic.py  unified.py
webnovel_kb/utils/: __init__.py  dedupe.py  exceptions.py  format.py  logging_config.py  query_cache.py
