[project]
name = "webnovel-kb"
version = "1.0.0"
description = "中文网络小说知识库 MCP 服务器"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["mcp", "webnovel", "knowledge-base", "chinese", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "chromadb>=0.4.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "networkx>=3.0",
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
optimized = [
    "tantivy>=0.2.0",
    "faiss-cpu>=1.7.0",
]

[project.scripts]
webnovel-kb = "webnovel_kb.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webnovel_kb"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
